# introduction-to-libraries-with-cmake

./: CMakeLists.txt
example/: Main.cpp
foo/: CMakeLists.txt
foo/include/: CMakeLists.txt
foo/include/Foo/: CMakeLists.txt
foo/src/: CMakeLists.txt
foo/src/Foo/: CMakeLists.txt  Hello.cpp
