set(FILES "")
set(SUBDIRECTORIES "Foo")
set(RELATIVE_PATH "src")

#Add all subdirectories
foreach(VAR ${SUBDIRECTORIES})
	add_subdirectory(${VAR})
endforeach()

if(FILES)
	#Add source fiels to target
	target_sources("${PROJECT_NAME}" PRIVATE ${FILES})
	#install our source files
	install(FILES ${FILES} DESTINATION ${RELATIVE_PATH})

endif()