set(FILES "${CMAKE_CURRENT_SOURCE_DIR}/Hello.h")
set(SUBDIRECTORIES "")
set(RELATIVE_PATH "include/Foo")

#Add all subdirectories
foreach(VAR ${SUBDIRECTORIES})
	add_subdirectories(${VAR})
endforeach()

if(FILES)
	#Add source fiels to target
	target_sources("${PROJECT_NAME}" PRIVATE ${FILES})
	#install our source files
	install(FILES ${FILES} DESTINATION ${RELATIVE_PATH})

endif()